make projects temporarily not clickable

--- a/index.html
+++ b/index.html
@@ -50,66 +50,66 @@
       <div id ="body">
 
         <!-- <a href="imagereg.html" class = "titlelink"> -->
-        <a href="construction.html" class = "titlelink">
+        <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
             <div class="cell_hover">
                 <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
             </div> 
           </div>
-        </a>
+        <!-- </a> -->
 
 
         <!-- <a href="Website.html" class = "titlelink"> -->
-        <a href="construction.html" class = "titlelink">
+        <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_website.png" alt = "Responsive Website">
             <div class="cell_hover">
                 <div class="cell_title">Responsive Website Design</div>
             </div>    
           </div>
-        </a>
+        <!-- </a> -->
 
 
         <!-- <a href="BrainSpace.html" class = "titlelink"> -->
-        <a href="construction.html" class = "titlelink">
+        <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_brainspace.gif" alt="Brain Space">
             <div class="cell_hover">
                 <div class="cell_title">Brain-Space: Exploring the Spatial Cell-Type Composition Within the Mouse Brain using Machine Learning</div>
             </div>    
           </div>
-        </a>
+        <!-- </a> -->
 
         <!-- <a href="NFT.html" class = "titlelink"> -->
-        <a href="construction.html" class = "titlelink">
+        <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_CryptHoes.png" alt="NFT Pic">
             <div class="cell_hover">
                 <div class="cell_title">NFT Project</div>
             </div>    
           </div>
-        </a>
+        <!-- </a> -->
 
         <!-- <a href="Capstone.html" class = "titlelink"> -->
-        <a href="construction.html" class = "titlelink">
+        <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
             <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.png">
             <div class="cell_hover">
                 <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
             </div>    
           </div>
-        </a>
+        <!-- </a> -->
 
         <!-- <a href="HandControl.html" class = "titlelink"> -->
-        <a href="construction.html" class = "titlelink">
+        <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_handgif.gif" alt="Hand Control Gif">
             <div class="cell_hover">
                 <div class="cell_title">Robotic Hand EMG-based Control</div>
             </div>    
           </div>
-        </a>
+        <!-- </a> -->
 
       </div>
       
