--- a/aboutme.html
+++ b/aboutme.html
@@ -57,21 +57,20 @@
                     <h4>
                         <p>My name is Sierra and I would describe myself as a passionate multi-disciplinary Engineer and 
                             problem solver.</p>
-                        <p>I am currently pursuing a Master of Science in Medical Physics
-                            & Biomedical Engineering at University College London expecting to graduate in September
-                            2022. I will be pursuing an interdisciplinary PhD in the faculties of 
-                            Computer Science, Medical Physics & Biomedical Engineering, 
-                            and Clinical and Movement Neurosciences in September 2023 at University College
-                            London on a project that will investigate deep learning techniques to acquire images of the adult human
-                            skull using ultrasound computed tomography. I graduated with a Bachelors of Science in 
+                        <p>I currently work for University College London Hospitals as a Clinical Scientist responsible 
+                            for scientific computing, medical device IT, workflow and data flows within the hospital, 
+                            and cybersecurity of connected medical devices.
+                            
+                            I gradauated from University College London in September 2022 with a MSc in Medical Physics
+                            & Biomedical Engineering with distinction. Prior to that, I graduated with a Bachelors of Science in 
                             Bioengineering and a minor in Mathematics with honors from the University of Washington in Seattle, WA 
                             in June 2020 and worked for a year in industry as a Medical Device Engineer/Acoustic Engineer in 2020-2021. 
+                            
                         </p>
-                        <p>I am looking for an internship in industry for the next year where I can continue 
-                            to develop my software engineering skills. I have experience working in start-up
-                            environments and enjoy high-impact versatile roles. I am highly multi-disciplinary 
-                            and eager to learn, but some of my specialties include medical imaging, DSP, MATLAB, Python, research
-                            planning and execution. 
+                        <p>I have experience working in start-up environments and enjoy high-impact versatile roles. 
+                            I am highly multi-disciplinary and eager to learn, but some of my specialties include 
+                            medical imaging, DSP, MATLAB, Python, research planning and execution. My professional interests
+                            are in digital electornics, machine learning, acoustic engineering, and computer vision.
                         </p>
                     </h4>
                 </div>
