--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,7 @@
                     <h4>
                         <p>My name is Sierra and I would describe myself as a passionate multi-disciplinary Engineer and 
                             problem solver.</p>
-                        <p>I currently work for University College London Hospitals as a Clinical Scientist responsible 
+                        <p>I currently work for University College London Hospitals as a Clinical Scientist trainee responsible 
                             for scientific computing, medical device IT, workflow and data flows within the hospital, 
                             and cybersecurity of connected medical devices.
                             
