update to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -57,20 +57,17 @@
                     <h4>
                         <p>My name is Sierra and I would describe myself as a passionate multi-disciplinary Engineer and 
                             problem solver.</p>
-                        <p>I currently work for University College London Hospitals as a Clinical Scientist trainee responsible 
-                            for scientific computing, medical device IT, workflow and data flows within the hospital, 
-                            and cybersecurity of connected medical devices.
-                            
-                            I gradauated from University College London in September 2022 with a MSc in Medical Physics
-                            & Biomedical Engineering with distinction. Prior to that, I graduated with a Bachelors of Science in 
-                            Bioengineering and a minor in Mathematics with honors from the University of Washington in Seattle, WA 
-                            in June 2020 and worked for a year in industry as a Medical Device Engineer/Acoustic Engineer in 2020-2021. 
+                        <p>I am currently a computational scientist with previous experience in academic and industrial research environments 
+                            at the Bioengineering Department at the University of Washington, the Medical Physics Department at 
+                            University College London, the RD group at Otonexus Medical Technologies, and the Mechanical Engineering 
+                            Research Group at Intellectual Ventures.
                             
                         </p>
-                        <p>I have experience working in start-up environments and enjoy high-impact versatile roles. 
+                        <p>
                             I am highly multi-disciplinary and eager to learn, but some of my specialties include 
-                            medical imaging, DSP, MATLAB, Python, research planning and execution. My professional interests
-                            are in digital electornics, machine learning, acoustic engineering, and computer vision.
+                            medical imaging, DSP, MATLAB, Python, research planning and execution. My personal research interests
+                            are intelligent medical imaging solutions, generative adverserial networks, neural radiance fields, 
+                            image classification, and their applications to multi-modal medical data.
                         </p>
                     </h4>
                 </div>
