--- a/aboutme.html
+++ b/aboutme.html
@@ -55,11 +55,11 @@
                 <div>
                     <h3>Hi! Nice to meet you.</h3>
                     <h4>
-                        <p>My name is Sierra and I would describe myself as a passionate multi-disciplinary Engineer and 
+                        <p>My name is Sierra and I would describe myself as a passionate computational scientist and 
                             problem solver.</p>
-                        <p>I am currently a computational scientist with previous experience in academic and industrial research environments 
-                            at the Bioengineering Department at the University of Washington, the Medical Physics Department at 
-                            University College London, the RD group at Otonexus Medical Technologies, and the Mechanical Engineering 
+                        <p>I have experience in academic and industrial research environments 
+                            at the Bioengineering Department at the University of Washington, Medical Physics Department at 
+                            University College London, R&D group at Otonexus Medical Technologies, and Mechanical Engineering 
                             Research Group at Intellectual Ventures.
                             
                         </p>
