update again to aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -55,19 +55,20 @@
                 <div>
                     <h3>Hi! Nice to meet you.</h3>
                     <h4>
-                        <p>My name is Sierra and I would describe myself as a passionate computational scientist and 
-                            problem solver.</p>
-                        <p>I have experience in academic and industrial research environments 
-                            at the Bioengineering Department at the University of Washington, Medical Physics Department at 
-                            University College London, R&D group at Otonexus Medical Technologies, and Mechanical Engineering 
-                            Research Group at Intellectual Ventures.
+                        <p>Hey there! I'm Sierra, a super passionate computational scientist and problem solver. </p>
+                        <p>I've had the opportunity to work in both academic and industrial research environments, including 
+                            at the Bioengineering Department at University of Washington, Medical Physics at University 
+                            College London, R&D at Otonexus Medical Technologies, and Mechanical Engineering at Intellectual 
+                            Ventures.
                             
                         </p>
                         <p>
-                            I am highly multi-disciplinary and eager to learn, but some of my specialties include 
-                            medical imaging, DSP, MATLAB, Python, research planning and execution. My personal research interests
-                            are intelligent medical imaging solutions, generative adverserial networks, neural radiance fields, 
-                            image classification, and their applications to multi-modal medical data.
+                            I am highly multi-disciplinary, with a strong foundation in various areas such as medical imaging, 
+                            digital signal processing, MATLAB, Python, and mathematics. With a keen interest in the field of medical
+                            imaging and its evolution, I am excited to delve into the research and development of intelligent medical
+                            imaging solutions. I am particularly passionate about the cutting-edge advancements in computer vision such
+                            as generative adversarial networks, neural radiance fields, image classification and exploring the applications
+                            of these techniques in multi-modal medical data.
                         </p>
                     </h4>
                 </div>
