--- a/aboutme.html
+++ b/aboutme.html
@@ -53,9 +53,9 @@
             <div class = "col_1">
                 <img class = "headshot" src="images/SierraBonilla_headshot.png" alt="headshot">
                 <div>
-                    <h3>Hi! Nice to meet you.</h3>
+                    <h3>Hi there!.</h3>
                     <h4>
-                        <p>Hey there! I'm Sierra, a super passionate computational scientist and problem solver. </p>
+                        <p>I'm Sierra, a super passionate computational scientist and problem solver. </p>
                         <p>I've had the opportunity to work in both academic and industrial research environments, including 
                             at the Bioengineering Department at University of Washington, Medical Physics at University 
                             College London, R&D at Otonexus Medical Technologies, and Mechanical Engineering at Intellectual 
