--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
             <div class = "col_1">
                 <img class = "headshot" src="images/SierraBonilla_headshot.png" alt="headshot">
                 <div>
-                    <h3>Hi there!.</h3>
+                    <h3>Hi there!</h3>
                     <h4>
                         <p>I'm Sierra, a super passionate computational scientist and problem solver. </p>
                         <p>I've had the opportunity to work in both academic and industrial research environments, including 
