--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- <a href="imagereg.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
+            <img class="grid_image" src="images/SierraBonilla_PosterFinal.jpeg" alt="MSc Poster Board">
             <div class="cell_hover">
                 <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
             </div> 
@@ -94,7 +94,7 @@
         <!-- <a href="Capstone.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
-            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.png">
+            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.jpeg">
             <div class="cell_hover">
                 <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
             </div>    
