added two projects and decrease size of images

--- a/index.html
+++ b/index.html
@@ -49,10 +49,25 @@
 
       <div id ="body">
 
+
+        <div class="grid_cell">
+          <img class="grid_image" src="images/SierraBonilla-butterflyGIF.gif" alt="DCGAN of Butterfly Dataset">
+          <div class="cell_hover">
+              <div class="cell_title">DCGAN Experiment with Butterfly Dataset</div>
+          </div> 
+        </div>
+
+        <div class="grid_cell">
+          <img class="grid_image" src="images/SierraBonilla_QuenchBand.png" alt="Ultrasound-Based Hydration Monitor Design">
+          <div class="cell_hover">
+              <div class="cell_title">Ultrasound-Based Hydration Monitor Device Design</div>
+          </div> 
+        </div>
+
         <!-- <a href="imagereg.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_PosterFinal.jpeg" alt="MSc Poster Board">
+            <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
             <div class="cell_hover">
                 <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
             </div> 
@@ -84,7 +99,7 @@
         <!-- <a href="NFT.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_CryptHoes.png" alt="NFT Pic">
+            <img class="grid_image" src="images/SierraBonilla_CryptHoes.jpg" alt="NFT Pic">
             <div class="cell_hover">
                 <div class="cell_title">NFT Project</div>
             </div>    
@@ -94,7 +109,7 @@
         <!-- <a href="Capstone.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
-            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.jpeg">
+            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.jpg">
             <div class="cell_hover">
                 <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
             </div>    
