--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
                 <div>
                     <h3>Hi there!</h3>
                     <h4>
-                        <p>I'm Sierra, a super passionate computational scientist and problem solver. </p>
+                        <p>I'm Sierra, a passionate computational scientist and problem solver. </p>
                         <p>I've had the opportunity to work in both academic and industrial research environments, including 
                             at the Bioengineering Department at University of Washington, Medical Physics at University 
                             College London, R&D at Otonexus Medical Technologies, and Mechanical Engineering at Intellectual 
