--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   
   <head>
-    <title>Sierra Bonilla | Engineering Portfolio</title>
+    <title>Sierra Bonilla | Portfolio</title>
 
     <!-- link to favicon of website -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- create meta data tags -->
-    <meta content="I am Sierra Bonilla. I am a Biomedical Engineer with 4 years of research and engineering experience at 
+    <meta content="I am Sierra Bonilla. I am a Biomedical Engineer with 5 years of research and engineering experience at 
     University of Washington, Otonexus Medical Technologies, University College London, and Intellectual Ventures. This is
     my engineering portfolio." name="description">
     <meta name="author" content="Sierra Bonilla">
