first page change

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  
   <head>
-    <title>Sierra Bonilla | Portfolio</title>
+    <title>Sierra Bonilla </title>
 
     <!-- link to favicon of website -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,154 +12,104 @@
     my engineering portfolio." name="description">
     <meta name="author" content="Sierra Bonilla">
     <meta property="og:title" content="Sierra Bonilla" />
-    <meta property="og:description" content="Engineering Portfolio" />
-    <meta property="og:image" content="images/SierraBonilla_featuredimage.png" />
+    <meta property="og:description" content="About Me" />
+    <meta property="og:image" content="images/featuredimage.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <!--link external fonts and style sheet-->
-    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,350,400,700' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
     <link rel='stylesheet' href="style.css">
 
   </head>
 
-  <body id = "webpage">
+  <body id="webpage">
 
     <div id ="container">
 
-      <!-- create header -->
-      <div id="header">
+        <!-- create header -->
+        <div id="header">
 
-        <nav>
-          <div class="title">
-            <a class = "titlelink" href="aboutme.html">
-              <h1>SIERRA   BONILLA</h1>
-            </a>
-          </div>
-          <div class="right-links">
-            <a class="links selected" href="/">PORTFOLIO</a>
-            <a class="links" href="aboutme.html">ABOUT</a>
-          </div>
-        </nav>
-
-      </div>
-
-      <hr/>
-
-      <div id ="body">
-
-
-        <div class="grid_cell">
-          <img class="grid_image" src="images/SierraBonilla-butterflyGIF.gif" alt="DCGAN of Butterfly Dataset">
-          <div class="cell_hover">
-              <div class="cell_title">DCGAN Experiment with Butterfly Dataset</div>
-          </div> 
-        </div>
-
-        <div class="grid_cell">
-          <img class="grid_image" src="images/SierraBonilla_QuenchBand.png" alt="Ultrasound-Based Hydration Monitor Design">
-          <div class="cell_hover">
-              <div class="cell_title">Ultrasound-Based Hydration Monitor Device Design</div>
-          </div> 
-        </div>
-
-        <!-- <a href="imagereg.html" class = "titlelink"> -->
-        <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
-            <div class="cell_hover">
-                <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
-            </div> 
-          </div>
-        <!-- </a> -->
-
-
-        <!-- <a href="Website.html" class = "titlelink"> -->
-        <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_website.png" alt = "Responsive Website">
-            <div class="cell_hover">
-                <div class="cell_title">Responsive Website Design</div>
-            </div>    
-          </div>
-        <!-- </a> -->
-
-
-        <!-- <a href="BrainSpace.html" class = "titlelink"> -->
-        <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_brainspace.gif" alt="Brain Space">
-            <div class="cell_hover">
-                <div class="cell_title">Brain-Space: Exploring the Spatial Cell-Type Composition Within the Mouse Brain using Machine Learning</div>
-            </div>    
-          </div>
-        <!-- </a> -->
-
-        <!-- <a href="NFT.html" class = "titlelink"> -->
-        <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_CryptHoes.jpg" alt="NFT Pic">
-            <div class="cell_hover">
-                <div class="cell_title">NFT Project</div>
-            </div>    
-          </div>
-        <!-- </a> -->
-
-        <!-- <a href="Capstone.html" class = "titlelink"> -->
-        <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.jpg">
-            <div class="cell_hover">
-                <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
-            </div>    
-          </div>
-        <!-- </a> -->
-
-        <!-- <a href="HandControl.html" class = "titlelink"> -->
-        <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_handgif.gif" alt="Hand Control Gif">
-            <div class="cell_hover">
-                <div class="cell_title">Robotic Hand EMG-based Control</div>
-            </div>    
-          </div>
-        <!-- </a> -->
-
-      </div>
-      
-
-      <div id="footer">
-
-        <div class = "social-footer">
-
-          <p1 class = "copyright">Copyright © Sierra Bonilla 2022</p1>
-
-          <ul class = "socials-list">
-            <li class="social-item">
-              <a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank" class = "titlelink">
-                <ion-icon name="logo-linkedin"></ion-icon>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="https://github.com/smbonilla" target="_blank" class = "titlelink">
-                <ion-icon name="logo-github"></ion-icon>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="mailto:sierrabonilla14@gmail.com" target="_blank" class = "titlelink">
-                <ion-icon name="mail"></ion-icon>
-              </a>
-            </li>
-          </ul>
+            <nav>
+                <div class="title">
+                    <a class = "titlelink" href="portfolio.html">
+                        <div>
+                            <h1>SIERRA   BONILLA</h1>
+                        </div>
+                    </a>
+                </div>
+                <div class="right-links">
+                    <a class="links" href="portfolio.html">PORTFOLIO</a>
+                    <a class="links selected" href="/">ABOUT</a>
+                </div>
+            </nav>
 
         </div>
 
-      </div>
+        <hr/>
 
-      <script src="app/js/script.js"></script>
-      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
-    
+        <div id ="body">
+
+            <div class = "col_1">
+                <div>
+                    <h4>
+                        <p>Currently:</p>
+                        <p>Computational Scientist at University College London Hospitals.</p>
+                        <p>Previously: </p>
+                        <p>Medical Device Design Engineer in R&D at Otonexus Medical Technologies.
+                            <br>
+                            Research Assistant & Teaching Assistant in Bioengineering Department at University of Washington.
+                            <br> 
+                            Mechanical Engineering Intern in R&D at Intellectual Ventures.                            
+                        </p>
+                        <p>
+                            MSc in Biomedical Engineering graduated with Distinction from University College London.
+                        </p>
+                        <p>
+                            BSc in Bioengineering and Minor in Mathematics graduated with Departmental Honors from University of Washington.
+                        </p>
+                    </h4>
+                </div>
+            </div>
+
+            <div class = "col_2">
+                <picture>
+                    <img class = "headshot" src="images/SierraBonillaHeadshotV2.png" alt="headshot">
+                </picture>
+
+                <div class="CV">
+                    <a href="PDF/CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a>
+                </div>
+            </div>
+
+         </div>
+
+        <div id="footer">
+
+            <div class = "social-footer">
+
+                <p1 class = "copyright">Copyright © Sierra Bonilla 2022</p1>
+
+                <ul class = "socials-list">
+                    <li class="social-item"><a href="https://www.linkedin.com/in/sierra-bonilla" target="_blank">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                    </a></li>
+                    <li class="social-item"><a href="https://github.com/smbonilla" target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
+                    </a></li>
+                    <li class="social-item"><a href="mailto:sierrabonilla14@gmail.com" target="_blank">
+                    <ion-icon name="mail"></ion-icon>
+                    </a></li>
+                </ul>
+
+            </div>
+
+        </div>
+
     </div>
+
+    <script src="app/js/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
   </body>
 </html>
