redesign of portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,12 +66,12 @@
 
         <!-- <a href="imagereg.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
+          <!-- <div class="grid_cell">
             <img class="grid_image" src="images/SierraBonilla_PosterFinal.png" alt="MSc Poster Board">
             <div class="cell_hover">
                 <div class="cell_title">Ultrasound-Based Skull Registration for Transcranial Ultrasound Stimulation</div>
             </div> 
-          </div>
+          </div> -->
         <!-- </a> -->
 
 
@@ -99,7 +99,7 @@
         <!-- <a href="NFT.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
           <div class="grid_cell">
-            <img class="grid_image" src="images/SierraBonilla_NFT.jpg" alt="NFT Pic">
+            <img class="grid_image" src="images/SierraBonilla_NFT.png" alt="NFT Pic">
             <div class="cell_hover">
                 <div class="cell_title">NFT Project</div>
             </div>    
@@ -108,12 +108,12 @@
 
         <!-- <a href="Capstone.html" class = "titlelink"> -->
         <!-- <a href="construction.html" class = "titlelink"> -->
-          <div class="grid_cell">
-            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.jpg">
+          <!-- <div class="grid_cell">
+            <img class="grid_image" alt = "Published Article" src="images/SierraBonilla_capstone.png">
             <div class="cell_hover">
                 <div class="cell_title">In-vitro Bubble-Enhanced Heating for Focused Ultrasound Treatments in the Brain</div>
             </div>    
-          </div>
+          </div> -->
         <!-- </a> -->
 
         <!-- <a href="HandControl.html" class = "titlelink"> -->
