hamburger officially added!!!

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,25 @@
 
       <!-- create header -->
       <div id="header">
+        <div id = "mobile-nav">
+
+          <ul class="menu">
+            <li><a class="menuItem" href="construction.html">PAPERS</a></li>
+            <li><a class="menuItem" href="projects.html">PROJECTS</a></li>
+            <li><a class="menuItem" href="/">ABOUT ME</a></li>
+          </ul>
+          <button class="hamburger">
+            <ion-icon name="menu-outline" class="menuIcon material-icons">menu</ion-icon>
+            <ion-icon name="close-outline" class="closeIcon material-icons">close</ion-icon>
+            <!-- <i class="menuIcon material-icons">menu</i>
+            <i class="closeIcon material-icons">close</i> -->
+          </button>
+
+          <section class = "mobile-name">
+            SIERRA BONILLA
+          </section>
+
+        </div>
 
         <nav>
           <div class="title">
@@ -38,7 +57,8 @@
             </a>
           </div>
           <div class="right-links">
-            <a class="links selected" href="portfolio.html">PORTFOLIO</a>
+            <a class="links" href="construction.html">PAPERS</a>
+            <a class="links selected" href="projects.html">PROJECTS</a>
             <a class="links" href="/">ABOUT</a>
           </div>
         </nav>
