--- a/construction.html
+++ b/construction.html
@@ -30,6 +30,26 @@
         <!-- create header -->
         <div id="header">
 
+            <div id = "mobile-nav">
+
+                <ul class="menu">
+                  <li><a class="menuItem" href="construction.html">PAPERS</a></li>
+                  <li><a class="menuItem" href="projects.html">PROJECTS</a></li>
+                  <li><a class="menuItem" href="/">ABOUT ME</a></li>
+                </ul>
+                <button class="hamburger">
+                  <ion-icon name="menu-outline" class="menuIcon material-icons">menu</ion-icon>
+                  <ion-icon name="close-outline" class="closeIcon material-icons">close</ion-icon>
+                  <!-- <i class="menuIcon material-icons">menu</i>
+                  <i class="closeIcon material-icons">close</i> -->
+                </button>
+      
+                <section class = "mobile-name">
+                  SIERRA BONILLA
+                </section>
+      
+            </div>
+
             <nav>
                 <div class="title">
                     <a class = "titlelink" href="/">
@@ -39,8 +59,9 @@
                     </a>
                 </div>
                 <div class="right-links">
-                    <a class="links" href="/">PORTFOLIO</a>
-                    <a class="links" href="aboutme.html">ABOUT</a>
+                    <a class="links selected" href="construction.html">PAPERS</a>
+                    <a class="links" href="projects.html">PROJECTS</a>
+                    <a class="links" href="/">ABOUT</a>
                 </div>
             </nav>
 
