--- a/index.html
+++ b/index.html
@@ -30,16 +30,37 @@
         <!-- create header -->
         <div id="header">
 
+            <div id = "mobile-nav">
+
+                <ul class="menu">
+                  <li><a class="menuItem" href="construction.html">PAPERS</a></li>
+                  <li><a class="menuItem" href="projects.html">PROJECTS</a></li>
+                  <li><a class="menuItem" href="/">ABOUT ME</a></li>
+                </ul>
+                <button class="hamburger">
+                  <ion-icon name="menu-outline" class="menuIcon material-icons">menu</ion-icon>
+                  <ion-icon name="close-outline" class="closeIcon material-icons">close</ion-icon>
+                  <!-- <i class="menuIcon material-icons">menu</i>
+                  <i class="closeIcon material-icons">close</i> -->
+                </button>
+      
+                <section class = "mobile-name">
+                  SIERRA BONILLA
+                </section>
+      
+            </div>
+
             <nav>
                 <div class="title">
-                    <a class = "titlelink" href="portfolio.html">
+                    <a class = "titlelink" href="/">
                         <div>
                             <h1>SIERRA   BONILLA</h1>
                         </div>
                     </a>
                 </div>
                 <div class="right-links">
-                    <a class="links" href="portfolio.html">PORTFOLIO</a>
+                    <a class="links" href="construction.html">PAPERS</a>
+                    <a class="links" href="projects.html">PORTFOLIO</a>
                     <a class="links selected" href="/">ABOUT</a>
                 </div>
             </nav>
@@ -78,7 +99,8 @@
                 </picture>
 
                 <div class="CV">
-                    <a href="PDF/CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a>
+                    <!-- <a href="PDF/CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a> -->
+                    <a href="PDF/CV/BonillaCV.pdf" target="_blank" class="CVlink">Resume</a>
                 </div>
             </div>
 
