created papers page

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
         <div id = "mobile-nav">
 
           <ul class="menu">
-            <li><a class="menuItem" href="construction.html">PAPERS</a></li>
+            <li><a class="menuItem" href="papers.html">PAPERS</a></li>
             <li><a class="menuItem" href="projects.html">PROJECTS</a></li>
             <li><a class="menuItem" href="/">ABOUT ME</a></li>
           </ul>
@@ -57,7 +57,7 @@
             </a>
           </div>
           <div class="right-links">
-            <a class="links" href="construction.html">PAPERS</a>
+            <a class="links" href="papers.html">PAPERS</a>
             <a class="links selected" href="projects.html">PROJECTS</a>
             <a class="links" href="/">ABOUT</a>
           </div>
