--- a/papers.html
+++ b/papers.html
@@ -114,7 +114,7 @@
                 </li>
                 <li class = "paper-item">  
                     <a href = "https://www.lwtech.edu/academics/general-education-requirements/quantitative-reasoning/undergraduate-research/" target="_blank">
-                        <b>Math Conference Speaker 2016</b>: S. Bonilla, N. Choudhury. "Robotic Arm Kinematics using Trigonometry and Matrix algebra." <i>Math Conference at Edmunds Community College. Feb. 20 2016.</i>
+                        <b>Math Conference Speaker 2016</b>: S. Bonilla, N. Choudhury. "Robotic Arm Kinematics using Trigonometry and Matrix algebra." <i>Math Conference at Edmunds Community College, Lynnwood, United States of America.</i>
                     </a>
                 </li>
             </ul>
