consistent font sizing

--- a/papers.html
+++ b/papers.html
@@ -70,7 +70,7 @@
         <div class ="papers">
 
             <div class = "paper-titles">
-                Papers
+                Papers:
             </div>
             <ul>
                 <li class = "paper-item">
@@ -82,7 +82,7 @@
             </ul>
 
             <div class = "paper-titles">
-                Theses
+                Theses:
             </div>
             <ul>
                 <li class = "paper-item">
@@ -98,7 +98,7 @@
             </ul>
 
             <div class = "paper-titles">
-                Conferences
+                Conferences:
             </div>
 
             <ul>
