updating font sizes and calling out of titles

--- a/index.html
+++ b/index.html
@@ -74,18 +74,13 @@
             <div class = "col_1">
                 <div>
                     <h4>
-                        <p>Currently:</p>
+                        <p><span style="background-color: #E4E4E4">Currently:</span></p>
                         <p>Computational Scientist at University College London Hospitals.</p>
-                        <p>Previously: </p>
-                        <p>Medical Device Design Engineer in R&D at Otonexus Medical Technologies.
-                            <br>
-                            Research Assistant & Teaching Assistant in Bioengineering Department at University of Washington.
-                            <br> 
-                            Mechanical Engineering Intern in R&D at Intellectual Ventures.                            
-                        </p>
-                        <p>
-                            MSc in Biomedical Engineering graduated with Distinction from University College London.
-                        </p>
+                        <p><span style="background-color: #e4e4e4">Previously: </span></p>
+                        <p>Medical Device Design Engineer in R&D at Otonexus Medical Technologies.</p>
+                        <p>Research Assistant & Teaching Assistant in Bioengineering Department at University of Washington.</p> 
+                        <p> Mechanical Engineering Intern in R&D at Intellectual Ventures.</p>
+                        <p>MSc in Biomedical Engineering graduated with Distinction from University College London.</p>
                         <p>
                             BSc in Bioengineering and Minor in Mathematics graduated with Departmental Honors from University of Washington.
                         </p>
