change to resume

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div class="CV">
                     <!-- <a href="PDF/CV/BonillaCV.pdf" download="BonillaCV" class="CVlink">Download Resume</a> -->
-                    <a href="PDF/CV/BonillaCV.pdf" target="_blank" class="CVlink">Resume</a>
+                    <a href="PDF/CV/bonillaCV_2023.pdf" target="_blank" class="CVlink">Resume</a>
                 </div>
             </div>
 
