Updating current role

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <div>
                     <h4>
                         <p><span style="background-color: #E4E4E4">Currently:</span></p>
-                        <p>Computational Scientist at University College London Hospitals.</p>
+                        <p>FT Computer Vision PhD Candidate at University College London.</p>
+                        <p>PT Computational Scientist at University College London Hospitals.</p>
                         <p><span style="background-color: #e4e4e4">Previously: </span></p>
                         <p>Medical Device Design Engineer in R&D at Otonexus Medical Technologies.</p>
                         <p>Research Assistant & Teaching Assistant in Bioengineering Department at University of Washington.</p> 
