added link to ai centre
on mouse hover change color

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div>
                     <h4>
                         <p><span style="background-color: #E4E4E4">Currently:</span></p>
-                        <p>FT Computer Vision PhD Candidate at University College London.</p>
+                        <p>FT PhD Candidate at <a href="https://www.ucl.ac.uk/ai-centre/ucl-centre-artificial-intelligence" target="_blank" onmouseover="this.style.color='#939799'" onmouseout="this.style.color='#272727'"">University College London Centre for Artificial Intelligence.</a></p>
                         <p>PT Computational Scientist at University College London Hospitals.</p>
                         <p><span style="background-color: #e4e4e4">Previously: </span></p>
                         <p>Medical Device Design Engineer in R&D at Otonexus Medical Technologies.</p>
